--- a/Dockerfile.migrator
+++ b/Dockerfile.migrator
@@ -9,9 +9,8 @@ COPY . .
 RUN CGO_ENABLED=0 go build -o migrate ./cmd/migrate
 
 FROM alpine:latest
+WORKDIR /app
 COPY --from=builder /app/migrate .
 
 COPY --from=builder /app/migrations ./migrations
 COPY --from=builder /app/config.yaml ./
-
-ENTRYPOINT ["./migrate", "up", "-c", "config.yaml"]
