--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
     depends_on:
       postgres_migrate:
         condition: service_completed_successfully
+    networks:
+      - review-network
 
   postgres_migrate:
     build:
@@ -20,9 +22,13 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+    entrypoint: ["./migrate"] 
+    command: ["up", "-c", "config.yaml"]
     depends_on:
       postgres:
         condition: service_healthy
+    networks:
+      - review-network
 
   postgres:
     image: postgres:17
@@ -37,6 +43,11 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - review-network
 
 volumes:
   postgres_data:
+
+networks:
+  review-network:
